--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
     <module>ear</module>
   </modules>
 
+  <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <distributionManagement>
     <site>
       <id>site</id>
@@ -27,9 +34,6 @@
     </site>
   </distributionManagement>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <dependencyManagement>
     <dependencies>
