--- a/servlets/servlet/pom.xml
+++ b/servlets/servlet/pom.xml
@@ -21,5 +21,11 @@
       <artifactId>primary-source</artifactId>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>6.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
