--- a/servlets/servlet/pom.xml
+++ b/servlets/servlet/pom.xml
@@ -27,5 +27,11 @@
           <version>6.0</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.example</groupId>
+          <artifactId>ejbs</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
